--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Minecraft Mod Downloader</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
     <div id="root"></div>
